--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -1,11 +1,25 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.github.adam6806.killerfrag.MainActivity" >
+  xmlns:tools="http://schemas.android.com/tools"
+  tools:context="com.github.adam6806.killerfrag.MainActivity" >
 
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+  <item
+    android:id="@+id/action_settings"
+    android:orderInCategory="100"
+    android:showAsAction="never"
+    android:title="@string/action_settings"/>
+  
+  <!-- button to show list from action bar -->
+  <item
+    android:id="@+id/show_list"
+    android:orderInCategory="100"
+    android:showAsAction="never"
+    android:title="@string/show_list"/>
+  
+    <!-- button to go back -->
+  <item
+    android:id="@+id/back"
+    android:orderInCategory="100"
+    android:showAsAction="always"
+    android:title="Back"/>
 
 </menu>
