--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -3,10 +3,10 @@
   tools:context="com.github.adam6806.killerfrag.MainActivity" >
 
   <item
-    android:id="@+id/action_settings"
+    android:id="@+id/about"
     android:orderInCategory="100"
     android:showAsAction="never"
-    android:title="@string/action_settings"/>
+    android:title="@string/about"/>
   
   <!-- button to show list from action bar -->
   <item
